@@ -5,7 +5,7 @@ Version: 0.1.5
 Date: 2016-8-22
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
-Depends: R (>= 2.10.0)
+Depends: R (>= 3.2.0)
 Suggests: testthat (>= 1.0.0), knitr, markdown
 VignetteBuilder: knitr
 Imports: rjson, GlobalOptions (>= 0.0.10), methods
