@@ -157,13 +157,14 @@ find_code = function(m, text) {
 # -text         text string in which variables are marked with certain rules
 # -envir          environment where to look for those variables
 # -code.pattern pattern of marks for the variables
-# -strwrap     whether call `base::strwrap` to wrap the string
 # -file        pass to `base::cat`
 # -sep         pass to `base::cat`
 # -fill        pass to `base::cat`
 # -labels      pass to `base::cat`
 # -append      pass to `base::cat`
 # -cat_prefix  prefix string. It is prior than ``qq.options(cat_prefix)``.
+# -strwrap     whether call `base::strwrap` to wrap the string
+# -strwrap_param parameters sent to `base::strwrap`, must be a list
 #
 # == details
 # This function is a shortcut of
@@ -196,11 +197,15 @@ find_code = function(m, text) {
 # Sys.sleep(2)
 # qqcat("a = @{a}, b = '@{b}'\n")
 # qq.options(RESET = TRUE)
-qqcat = function(text, envir = parent.frame(), code.pattern = NULL, strwrap = TRUE, file = "",
-    sep = " ", fill = FALSE, labels = NULL, append = FALSE, cat_prefix = NULL) {
+qqcat = function(text, envir = parent.frame(), code.pattern = NULL, file = "",
+    sep = " ", fill = FALSE, labels = NULL, append = FALSE, cat_prefix = NULL,
+    strwrap = TRUE, strwrap_param = list()) {
 	text = qq(text, envir, code.pattern)
 	if(strwrap) {
-		text = paste(strwrap(text), collapse = "\n")
+		if(!inherits(strwrap_param, "list")) {
+			stop("`strwrap_param` must be a list.")
+		}
+		text = paste(do.call("strwrap", c(strwrap_param, list(x = text))), collapse = "\n")
 	}
 	cat(text, file = file, sep = sep, fill = fill, labels = labels, append = append, cat_prefix = cat_prefix)
 }
