@@ -1,6 +1,7 @@
 Changes in version 0.1.5
 
 * head and foot of the message are properly wrapped.
+* qqcat: text are wrapped with fixed width per line by default
 
 ---------------------------------------------------------------------------
 
